k8s/users-api.yml
apiVersion: v1
kind: Service
metadata:
  name: users-api
spec:
  selector:
    app: users-api
  ports:
    - protocol: "TCP"
      port: 9996
      targetPort: 9996
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-api
spec:
  selector:
    matchLabels:
      app: users-api
  replicas: 1
  template:
    metadata:
      labels:
        app: users-api
    spec:
      containers:
        - name: users-api
          image: users-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 9996
          livenessProbe:
            httpGet:
              path: /health
              port: 9996
            initialDelaySeconds: 3
            periodSeconds: 3
